<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="salary"
            type="String" />

        <variable
            name="skills"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_near_no_data"
            style="@style/TextGrayBold13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/no_nearest_jobs_found"
            android:textColor="@color/text_gray"
            android:visibility="gone"
            tools:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rl_recycleview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_suggested"
                style="@style/TextBlackBold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/suggested_jobs"
                android:textColor="@color/colorBlack" />

            <ImageView
                android:id="@+id/iv_suggested_job_arrow"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@+id/tv_suggested"
                android:contentDescription="@null"
                android:padding="2dp"
                android:src="@drawable/ic_arrow_down" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_suggested_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_suggested"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="80dp"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/iv_no_jobs"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_job_blue"
                    app:tint="@color/title_grey_color" />

                <TextView
                    style="@style/TextGrayBold13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/no_jobs_found"
                    android:textColor="@color/text_gray" />
            </LinearLayout>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/bg_grey"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <View
                android:id="@+id/view_selected"
                android:layout_width="5dp"
                android:layout_height="80dp"
                android:background="@color/green"
                android:visibility="visible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iv_aero"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/bg_round_white"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_arrow_right" />

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@null"
                    android:src="@drawable/img_painter"
                    tools:src="@drawable/bg_gradient_white_blue_radius_14" />

                <LinearLayout
                    android:id="@+id/ll_title_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/iv_aero"
                    android:layout_toEndOf="@+id/iv_profile"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/TextGrayBold13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        tools:text="@string/ui_ux_designer" />

                    <TextView
                        style="@style/TextGreyRegular12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/title_black_color"
                        tools:text="@string/delight" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_title_desc"
                    android:layout_toEndOf="@+id/iv_profile"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_first"
                        style="@style/TextGreyRegular12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/_4500_m" />

                    <TextView
                        style="@style/TextGreyRegular12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@+id/iv_selected"
                        android:layout_toEndOf="@+id/tv_first"
                        android:ellipsize="end"
                        android:singleLine="true"
                        tools:text="@string/bangalore" />

                    <ImageView
                        android:id="@+id/iv_selected"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@null"
                        android:padding="5dp"
                        android:src="@drawable/ic_selected_green"
                        android:visibility="visible" />

                    <TextView
                        style="@style/TextGreyRegular12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="5dp"
                        android:text=""
                        android:visibility="gone"
                        tools:text="@string/_1_km" />
                </RelativeLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</layout>